--- a/app/src/main/res/layout/schedule_item_layout.xml
+++ b/app/src/main/res/layout/schedule_item_layout.xml
@@ -1,48 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:weightSum="10">
 
-    <TableRow>
+    <TextView
+        android:id="@+id/timeQueue"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:ellipsize="marquee"
+        android:fontFamily="@font/lato"
+        android:padding="8dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/timeQueue"
-            android:layout_column="1"
-            android:layout_weight="2"
-            android:ellipsize="marquee"
-            android:fontFamily="@font/lato"
-            android:padding="8dp"
-            android:text=""
-            android:textAlignment="center"
-            android:textColor="@color/textColor"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/timeDepart"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:ellipsize="marquee"
+        android:fontFamily="@font/lato_black"
+        android:padding="8dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/timeDepart"
-            android:layout_column="2"
-            android:layout_weight="2"
-            android:ellipsize="marquee"
-            android:fontFamily="@font/lato"
-            android:padding="8dp"
-            android:text=""
-            android:textAlignment="center"
-            android:textColor="@color/textColor"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/vanCompany"
-            android:layout_column="3"
-            android:layout_weight="6"
-            android:ellipsize="marquee"
-            android:fontFamily="@font/lato"
-            android:padding="8dp"
-            android:singleLine="true"
-            android:text=""
-            android:textAlignment="center"
-            android:textColor="@color/textColor"
-            android:textSize="16sp" />
-    </TableRow>
-
-</TableLayout>
+    <TextView
+        android:id="@+id/vanCompany"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="6"
+        android:ellipsize="marquee"
+        android:fontFamily="@font/lato"
+        android:padding="8dp"
+        android:singleLine="true"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textSize="16sp" />
+</LinearLayout>
