--- a/app/src/main/res/layout/activity_admin_chat.xml
+++ b/app/src/main/res/layout/activity_admin_chat.xml
@@ -34,10 +34,11 @@
             android:layout_centerInParent="true"
             android:drawableTop="@drawable/ic_icon_sad_chat_100"
             android:drawablePadding="16dp"
+            android:drawableTint="@color/colorAccent"
             android:fontFamily="@font/lato"
             android:text="@string/chat_admin_status_text"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorAccent"
             android:textSize="16sp"
             android:visibility="visible" />
 
@@ -56,11 +57,11 @@
         android:background="#FFFFFF"
         android:elevation="8dp"
         android:gravity="center"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
         android:orientation="horizontal"
         android:paddingStart="16dp"
-        android:paddingEnd="16sp">
+        android:paddingTop="8dp"
+        android:paddingEnd="16sp"
+        android:paddingBottom="8dp">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputChat"
