--- a/app/src/main/res/layout/activity_admin_route_schedule.xml
+++ b/app/src/main/res/layout/activity_admin_route_schedule.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.admin.AdminTripSchedulesActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -19,5 +19,23 @@
         app:subtitleTextColor="#FFFFFF"
         app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
         app:titleTextColor="#FFFFFF" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        style="@style/Widget.MaterialComponents.TabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabIndicatorHeight="3dp"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/textColor"
+        app:tabTextAppearance="@style/TabTextAppearance"
+        app:tabTextColor="#99121212" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/background_body"
+        android:orientation="horizontal" />
 
 </LinearLayout>
