--- a/app/src/main/res/layout/activity_user_chat.xml
+++ b/app/src/main/res/layout/activity_user_chat.xml
@@ -34,10 +34,11 @@
             android:layout_centerInParent="true"
             android:drawableTop="@drawable/ic_icon_sad_chat_100"
             android:drawablePadding="16dp"
+            android:drawableTint="@color/colorAccent"
             android:fontFamily="@font/lato"
             android:text="@string/chat_status_text"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorAccent"
             android:textSize="16sp"
             android:visibility="visible" />
 
