--- a/app/src/main/res/layout/activity_user_schedules.xml
+++ b/app/src/main/res/layout/activity_user_schedules.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.user.UserSchedulesActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -21,21 +21,21 @@
         app:titleTextColor="#FFFFFF" />
 
     <com.google.android.material.tabs.TabLayout
-        style="@style/Widget.MaterialComponents.TabLayout"
         android:id="@+id/tabLayout"
+        style="@style/Widget.MaterialComponents.TabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabIndicatorHeight="3dp"
         app:tabMode="fixed"
         app:tabSelectedTextColor="@color/textColor"
         app:tabTextAppearance="@style/TabTextAppearance"
-        app:tabTextColor="#99121212"/>
+        app:tabTextColor="#99121212" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:background="@drawable/background_body" />
+        android:background="@drawable/background_body"
+        android:orientation="horizontal" />
 
 </LinearLayout>
