--- a/app/src/main/res/layout/activity_user_book.xml
+++ b/app/src/main/res/layout/activity_user_book.xml
@@ -184,8 +184,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="5"
-                        android:clickable="true"
-                        android:focusable="true"
                         android:hint="Time"
                         app:startIconDrawable="@drawable/ic_input_clock"
                         app:startIconTint="@color/colorPrimary">
@@ -194,9 +192,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
-                            android:focusable="false"
                             android:fontFamily="@font/lato"
-                            android:inputType="time"
+                            android:inputType="none"
                             android:maxLines="1"
                             android:textCursorDrawable="@null" />
 
