--- a/app/src/main/res/layout/dialog_confirm_booking.xml
+++ b/app/src/main/res/layout/dialog_confirm_booking.xml
@@ -34,7 +34,7 @@
                     android:textColor="#FFFFFF" />
 
                 <TextView
-                    android:id="@+id/confirmBookingReferenceNo"
+                    android:id="@+id/bookingReferenceNo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato"
@@ -136,7 +136,22 @@
                 android:paddingStart="16dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="16sp"
+                android:orientation="horizontal"
                 android:paddingBottom="8dp">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnCancelBooking"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_black"
+                    android:text="CANCEL"
+                    android:textColor="@color/colorPrimary"
+                    app:backgroundTint="#FFFFFF" />
+
+                <Space
+                    android:layout_width="6dp"
+                    android:layout_height="match_parent"/>
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnConfirmBooking"
